# AI-Resume-Insights

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  test.py
backend/: .env.dev  conversation.json  docker-compose.yml  pyproject.toml  requirements.txt
backend/api/: serializers.py
backend/ats/: forms.py  models.py  urls.py  views.py
backend/ats/migrations/: 0001_initial.py  0002_alter_resume_resume.py
backend/ats/templates/ats/: home.html  resumeReview.html  resumeUpload.html
backend/backend/: conversation.json  cover_letter_cache.json  job_analyzer_cache.json  job_matches_cache.json  requirements.txt
backend/backend/ats/: api.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/backend/ats/migrations/: 0001_initial.py  0002_rename_quantitative_impact_analysis_resume_active_voice_feedback_and_more.py  0003_resume_overall_feedback_resume_overall_score.py  0004_resume_cover_letter.py  0005_resume_job_matches.py  0006_jobdescription_jobanalysis.py
backend/backend/backend/: settings.py  urls.py
backend/backend/useraccount/: api.py  forms.py  models.py  serializers.py  urls.py
backend/backend/useraccount/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_user_about_me.py
backend/core/: settings.py  urls.py
frontend/: .gitignore  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(default)/: layout.tsx  page.tsx
notebooks/: Cover_Letter_Gen.ipynb  Job_Matches.ipynb  Second_Attempt.ipynb  job_analyzer.ipynb
(+166 files in other folders)
