[tool.poetry]
name = "ai-ats-resume-checker"
version = "0.1.0"
description = ""
authors = ["Nithin1729S <sureshnithin1729@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-restframework = "^0.0.1"
django-cors-headers = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
