[tool.poetry]
name = "ai-ats-resume-checker"
version = "0.1.0"
description = ""
authors = ["Nithin1729S <sureshnithin1729@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-restframework = "^0.0.1"
django-cors-headers = "^4.4.0"
langgraph = "^0.2.28"
langchain-google-genai = "^2.0.0"
pypdf2 = "^3.0.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
