[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nithin1729S <sureshnithin1729@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.5.0"
langgraph = "^0.2.39"
langchain-google-genai = "^2.0.1"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.1"
pyjwt = "^2.9.0"
sqlparse = "^0.5.1"
pytz = "^2024.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "^2.9.10"
asgiref = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
